--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 dj-database-url==2.3.0
 Django==5.1.2
+django-allauth==65.1.0
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
 gunicorn==23.0.0
