--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
+cloudinary==1.41.0
 dj-database-url==2.3.0
 Django==5.1.2
 django-allauth==65.1.0
+django-cloudinary-storage==0.3.0
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
 gunicorn==23.0.0
@@ -12,6 +14,7 @@ packaging==24.1
 pillow==11.0.0
 psycopg==3.1.12
 requests==2.32.3
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 urllib3==2.2.3
