--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cloudinary==1.41.0
 dj-database-url==2.3.0
 Django==5.1.2
 django-allauth==65.1.0
+django-anymail==12.0
 django-cloudinary-storage==0.3.0
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
